--- a/index.html
+++ b/index.html
@@ -4,40 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Serial Monitor Pro</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <style>
+        body.dark-mode {
+            background-color: #121212;
+            color: white;
+        }
+        textarea {
+            height: 300px;
+            resize: vertical;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1 class="text-center"> CẤN TẤT TUẤN - 艮必俊</h1>
+    <div class="container py-4">
+        <h1 class="text-center mb-4">CẤN TẤT TUẤN - 艮必俊</h1>
 
-        <div class="row">
-            <div class="col-md-6">
-                <button id="connectButton" class="btn btn-success">Kết nối Serial</button>
-                <button id="disconnectButton" class="btn btn-danger" disabled>Ngắt kết nối</button>
-                <button id="clearButton" class="btn btn-warning">🧹 Xóa màn hình</button>
+        <div class="row g-3">
+            <div class="col-md-4">
+                <label for="baudRate">Tốc độ truyền</label>
+                <input type="number" id="baudRate" class="form-control" value="115200">
             </div>
-            <div class="col-md-6">
-                <input type="number" id="baudRate" class="form-control" placeholder="Nhập baud rate..." value="9600">
-                <select id="dataFormat" class="form-select">
-                    <option value="ascii">ASCII</option>
-                    <option value="hex">HEX</option>
-                    <option value="bin">BIN</option>
+            <div class="col-md-4">
+                <label for="dataBits">Bit dữ liệu</label>
+                <select id="dataBits" class="form-select">
+                    <option value="7">7</option>
+                    <option value="8" selected>8</option>
                 </select>
+            </div>
+            <div class="col-md-4">
+                <label for="stopBits">Dừng bit</label>
+                <select id="stopBits" class="form-select">
+                    <option value="1" selected>1</option>
+                    <option value="2">2</option>
+                </select>
+            </div>
+            <div class="col-md-4">
+                <label for="parity">Kiểm tra chữ số</label>
+                <select id="parity" class="form-select">
+                    <option value="none" selected>Không có</option>
+                    <option value="even">Chẵn</option>
+                    <option value="odd">Lẻ</option>
+                </select>
+            </div>
+            <div class="col-md-4">
+                <label for="bufferSize">Bộ đệm</label>
+                <input type="number" id="bufferSize" class="form-control" value="1024" disabled>
+            </div>
+            <div class="col-md-4">
+                <label for="flowControl">Kiểm soát lưu lượng</label>
+                <select id="flowControl" class="form-select">
+                    <option value="none" selected>Không có</option>
+                    <option value="hardware">Hardware (RTS/CTS)</option>
+                </select>
+            </div>
+
+            <div class="col-12 d-flex gap-2">
+                <button id="connectButton" class="btn btn-primary">Chọn Cổng nối tiếp</button>
+                <button id="disconnectButton" class="btn btn-danger" disabled>Ngắt kết nối</button>
+                <button id="clearButton" class="btn btn-warning">XỚ màn hình</button>
             </div>
         </div>
 
-        <textarea id="serialOutput" readonly class="form-control mt-3"></textarea>
+        <textarea id="serialOutput" class="form-control mt-3" readonly></textarea>
 
         <div class="input-group mt-3">
             <input type="text" id="serialInput" class="form-control" placeholder="Nhập lệnh...">
-            <button id="sendButton" class="btn btn-primary">Gửi</button>
+            <button id="sendButton" class="btn btn-success">Gửi</button>
         </div>
 
-        <div class="mt-3">
+        <div class="mt-3 d-flex align-items-center gap-3">
             <button id="saveButton" class="btn btn-secondary">💾 Lưu dữ liệu</button>
-            <input type="checkbox" id="autoScroll" checked> Auto Scroll
-            <input type="checkbox" id="darkMode"> Dark Mode
+            <select id="dataFormat" class="form-select w-auto">
+                <option value="ascii">ASCII</option>
+                <option value="hex">HEX</option>
+                <option value="bin">BIN</option>
+            </select>
+            <label><input type="checkbox" id="autoScroll" checked> Auto Scroll</label>
+            <label><input type="checkbox" id="darkMode"> Dark Mode</label>
         </div>
     </div>
 
