--- a/index.html
+++ b/index.html
@@ -85,130 +85,7 @@
             <label><input type="checkbox" id="autoScroll" checked> Auto Scroll</label>
         </div>
     </div>
-
-    <script>
-        let port;
-        let reader;
-        let isReading = false;
-        let sendInterval = null;
-
-        async function getSerialOptions() {
-            return {
-                baudRate: parseInt(document.getElementById("baudRate").value),
-                dataBits: parseInt(document.getElementById("dataBits").value),
-                stopBits: parseInt(document.getElementById("stopBits").value),
-                parity: document.getElementById("parity").value,
-                flowControl: document.getElementById("flowControl").value
-            };
-        }
-
-        document.getElementById("connectButton").addEventListener("click", async () => {
-            try {
-                const options = await getSerialOptions();
-                port = await navigator.serial.requestPort();
-                await port.open(options);
-
-                document.getElementById("disconnectButton").disabled = false;
-                document.getElementById("connectButton").disabled = true;
-                readSerialData();
-            } catch (err) {
-                alert("Lỗi kết nối: " + err.message);
-            }
-        });
-
-        document.getElementById("disconnectButton").addEventListener("click", async () => {
-            isReading = false;
-            if (reader) await reader.cancel();
-            if (port && port.readable) await port.close();
-
-            document.getElementById("connectButton").disabled = false;
-            document.getElementById("disconnectButton").disabled = true;
-        });
-
-        async function readSerialData() {
-            isReading = true;
-            const textDecoder = new TextDecoderStream();
-            port.readable.pipeTo(textDecoder.writable);
-            reader = textDecoder.readable.getReader();
-            const output = document.getElementById("serialOutput");
-            const maxLength = 10000;
-
-            try {
-                while (isReading) {
-                    const { value, done } = await reader.read();
-                    if (done || !value) break;
-                    const formatted = formatData(value);
-                    output.value += formatted + "\n";
-                    if (output.value.length > maxLength) {
-                        output.value = output.value.slice(-maxLength);
-                    }
-                    if (document.getElementById("autoScroll").checked) {
-                        output.scrollTop = output.scrollHeight;
-                    }
-                }
-            } catch (err) {
-                console.error("Lỗi đọc dữ liệu:", err);
-            } finally {
-                reader.releaseLock();
-            }
-        }
-
-        function formatData(data) {
-            const format = document.getElementById("dataFormat").value;
-            if (format === "hex") {
-                return [...data].map(c => c.charCodeAt(0).toString(16).padStart(2, '0')).join(' ');
-            } else if (format === "bin") {
-                return [...data].map(c => c.charCodeAt(0).toString(2).padStart(8, '0')).join(' ');
-            }
-            return data;
-        }
-
-        document.getElementById("sendButton").addEventListener("click", async () => {
-            await sendSerialData();
-        });
-
-        document.getElementById("autoSendButton").addEventListener("click", () => {
-            const interval = parseInt(document.getElementById("intervalMs").value);
-            if (isNaN(interval) || interval <= 0) {
-                alert("Khoảng thời gian gửi không hợp lệ!");
-                return;
-            }
-            if (!port || !port.writable) {
-                alert("Cổng Serial chưa sẵn sàng!");
-                return;
-            }
-            sendInterval = setInterval(sendSerialData, interval);
-        });
-
-        document.getElementById("stopSendButton").addEventListener("click", () => {
-            clearInterval(sendInterval);
-        });
-
-        async function sendSerialData() {
-            const data = document.getElementById("serialInput").value.trim();
-            if (!data || !port || !port.writable) return;
-            const encoder = new TextEncoder();
-            const writer = port.writable.getWriter();
-            await writer.write(encoder.encode(data + "\n"));
-            writer.releaseLock();
-        }
-
-        document.getElementById("saveButton").addEventListener("click", () => {
-            const data = document.getElementById("serialOutput").value;
-            const blob = new Blob([data], { type: "text/plain" });
-            const a = document.createElement("a");
-            a.href = URL.createObjectURL(blob);
-            a.download = "serial_log.txt";
-            a.click();
-        });
-
-        document.getElementById("clearButton").addEventListener("click", () => {
-            document.getElementById("serialOutput").value = "";
-        });
-
-        document.getElementById("darkMode").addEventListener("change", () => {
-            document.body.classList.toggle("dark-mode");
-        });
-    </script>
+<script src="script.js"></script>
+      
 </body>
 </html>
